--- a/starter-kit/app/src/uswds_assets/sass/styles.scss
+++ b/starter-kit/app/src/uswds_assets/sass/styles.scss
@@ -35,7 +35,7 @@
 // @import 'packages/typography';
 // @import 'packages/validation';
 // @import 'packages/usa-accordion';
-@import "packages/usa-alert";
+// @import "packages/usa-alert";
 // @import 'packages/usa-banner';
 // @import 'packages/usa-breadcrumb';
 // @import 'packages/usa-button';
@@ -52,7 +52,7 @@
 // @import 'packages/usa-nav';
 // @import 'packages/usa-navbar';
 // @import 'packages/usa-section';
-@import "packages/usa-search";
+// @import "packages/usa-search";
 // @import 'packages/usa-sidenav';
 // @import 'packages/usa-skipnav';
 // @import 'packages/usa-table';
