--- a/starter-kit/app/src/components/Common/Table/UswdsTable.css
+++ b/starter-kit/app/src/components/Common/Table/UswdsTable.css
@@ -1,14 +1,20 @@
-.filterAndSearch{
-position: relative;
+.filterAndSearch {
+  position: relative;
 }
-.filter{
-    width: auto;
-    background-color: #ccc;
-    height:100%;
-    display: inline-block;
-    top:0;
-}
-.container{
-    position: relative;
-}
+.filter {
+  width: auto;
+  height: 100%;
+  display: inline-block;
 
+  top: 0;
+}
+.search {
+  background-color: #ccc;
+  display: inline-block;
+  position: absolute;
+  right: 0;
+}
+.container {
+  position: relative;
+  left: 0;
+}
