--- a/src/components/workspace/DynamicTabBar/SelectedFacilityTab/HeaderInfo/HeaderInfo.css
+++ b/src/components/workspace/DynamicTabBar/SelectedFacilityTab/HeaderInfo/HeaderInfo.css
@@ -7,10 +7,13 @@
 }
 a {
   padding: 5px;
+  font-weight:bold;
+  color: gray;
 }
 
 .mpSelect {
   align-items: center;
+  padding: 10px;
 }
 .selects {
   display: flex;
@@ -21,5 +24,14 @@ a {
   padding-right: 50px;
   position: absolute;
   right: 0;
+  
+}
+.eval,.submission {
+  font-weight:bold;
+  display: inline-block;
+}
+.answer{
+  padding:10px;
+  font-size: 15px;
   display: inline-block;
 }
