--- a/src/components/workspace/DynamicTabBar/SelectFacilitiesTab/DataTableRender.css
+++ b/src/components/workspace/DynamicTabBar/SelectFacilitiesTab/DataTableRender.css
@@ -9,7 +9,7 @@ tbody {
   width: 100%;
 } */
 tbody {
-  height: 600px; /* Just for the demo          */
+  height: auto; /* Just for the demo          */
   overflow-y: auto; /* Trigger vertical scroll    */
   overflow-x: hidden; /* Hide the horizontal scroll */
   width: 100%;
