--- a/src/components/MonitoringPlans/DynamicTabBar/MonitoringPlanTab/AccordionItemTitle/AccordionItemTitle.css
+++ b/src/components/MonitoringPlans/DynamicTabBar/MonitoringPlanTab/AccordionItemTitle/AccordionItemTitle.css
@@ -1,19 +1,17 @@
 
 .methodTitle{
-    display: inline-block;
+    display: inline-block; 
+    justify-content:center;
 }
 .rectBTN {
 
-    margin-right: 0;
     background-color: white;
     border: solid;
     color: grey;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
-    margin: 4px 2px;
     cursor: pointer;
-
     outline:none;
     height: 10px;
     display :flex;
@@ -21,4 +19,3 @@
     float:right;
     font-weight:bold;
   }
-  
