fix sonarcloud bugs

--- a/src/components/Common/Footer/Footer.css
+++ b/src/components/Common/Footer/Footer.css
@@ -27,12 +27,12 @@
   left: 130px;
   width: 420px;
   height: 25px;
-  font: var(--unnamed-font-style-normal) normal bold 20px/30px
-    var(--unnamed-font-family-source-sans-pro);
+  /* font: var(--unnamed-font-style-normal) normal bold 20px/30px
+    var(--unnamed-font-family-source-sans-pro); */
   letter-spacing: var(--unnamed-character-spacing-0);
-  color: var(--base);
-  text-align: left;
-  font: normal normal bold 20px/30px Source Sans Pro;
-  letter-spacing: 0px;
   color: #212121;
+  text-align: left;
+  font: normal bold 20px/30px Source Sans Pro, sans-serif;
+  /* letter-spacing: 0px;
+  color: var(--base); */
 }
