--- a/src/components/Common/WideHeader/WideHeader.css
+++ b/src/components/Common/WideHeader/WideHeader.css
@@ -2,7 +2,7 @@
   height: 45px;
   width: 100px;
   padding-bottom: 15px;
-  margin-left: 30px;
+
 }
 .menuBTN {
   overflow: auto;
@@ -19,3 +19,6 @@
   color: #0071bc;
   border-radius: 5px;
 }
+.sitewide-alert__content {
+    margin: 0 ;
+  }
