--- a/src/components/Common/WideHeader/WideHeader.css
+++ b/src/components/Common/WideHeader/WideHeader.css
@@ -2,13 +2,12 @@
   height: 45px;
   width: 100px;
   padding-bottom: 15px;
-
 }
 .menuBTN {
   overflow: auto;
   background-color: white;
   text-align: center;
-  width:81px;
+  width: 81px;
   height: 42px;
   margin-top: 22px;
   margin-right: 40px;
@@ -19,6 +18,19 @@
   color: #0071bc;
   border-radius: 5px;
 }
+
 .sitewide-alert__content {
-    margin: 0 ;
-  }
+  font-size: 70.5882%;
+  margin: 0;
+  max-width: 35rem;
+  padding: 0.5em 6.5em 0.5em 3.66667em;
+  position: relative;
+}
+.usa-nav {
+  width: 20%;
+}
+.usa-nav__primary button {
+  font: normal normal bold 15px/22px;
+  letter-spacing: 0px;
+  color: #0071bc;
+}
