--- a/src/components/Common/WideHeader/WideHeader.css
+++ b/src/components/Common/WideHeader/WideHeader.css
@@ -30,7 +30,8 @@
   width: 20%;
 }
 .usa-nav__primary button {
-  font: normal normal bold 15px/22px;
+  font-weight: bold;
   letter-spacing: 0px;
   color: #0071bc;
+  font-family: "Merriweather", "Georgia", "Cambria", "Times New Roman", "Times", serif;
 }
