feature/803-ui-build-version-publish-date (#882)
* added build version and publish date to footer

* added build version and publish date to footer

* added build version and publish date to footer

Co-authored-by: jasonwhitehead <jasonwhitehad@cvpcorp.com>

--- a/src/components/Common/Footer/Footer.css
+++ b/src/components/Common/Footer/Footer.css
@@ -31,3 +31,10 @@
   text-align: left;
   font: normal bold 20px/30px Source Sans Pro, sans-serif;
 }
+
+.version {
+  position: absolute;
+  top: 65px;
+  left: 130px;
+  font: normal 15px/30px Source Sans Pro, sans-serif;
+}
