--- a/src/components/MonitoringPlans/DynamicTabBar/MonitoringPlanTab/HeaderInfo/HeaderInfo.css
+++ b/src/components/MonitoringPlans/DynamicTabBar/MonitoringPlanTab/HeaderInfo/HeaderInfo.css
@@ -20,15 +20,15 @@ a {
   display: flex;
   position: relative;
   width: fit-content;
-  float:left
+  float: left;
 }
 .statuses.column {
   padding-right: 50px;
   position: relative;
-  right:0;
+  right: 0;
   width: fit-content;
   height: auto;
-  padding-left:500px;
+  padding-left: 270px;
 }
 .eval,
 .submission {
