--- a/src/components/Common/Table/UswdsTable.css
+++ b/src/components/Common/Table/UswdsTable.css
@@ -46,6 +46,7 @@
   width: fit-content;
   min-width: 50px;
   font-size: 15px;
+  margin-top: 20px;
   margin-right: 20px;
   margin-bottom: 20px;
   border-radius: 5px;
@@ -56,4 +57,7 @@
 
   right: left;
   border: 2px solid gray ;
+}
+.container > .usa-table{
+  margin: 0;
 }
