--- a/src/components/MonitoringPlans/DynamicTabBar/MonitoringPlanTab/Sections/Systems/SystemsComponent/DataTableSystemsComponentsRender.css
+++ b/src/components/MonitoringPlans/DynamicTabBar/MonitoringPlanTab/Sections/Systems/SystemsComponent/DataTableSystemsComponentsRender.css
@@ -8,7 +8,7 @@ tbody {
   justify-content: center;
   bottom: 0;
   margin-bottom: -5px;
-  margin-top:0px;
+  margin-top: 0px;
 }
 tbody {
   overflow-y: auto; /* Trigger vertical scroll    */
@@ -16,26 +16,32 @@ tbody {
   width: 100%;
 }
 
-
 .tableTitle {
   float: left;
-  padding-left:10px;
+  padding-left: 10px;
 
-  padding-top:20px;
-  padding-bottom:0px;
-
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-.systemsCompTable> .container {
+.systemsCompTable > .container {
   max-width: 100%;
   min-width: 90%;
   width: 100%;
   padding: 0px;
   background-color: white;
-
 }
-.systemsCompTable{
-  border-style: solid ;
-  border-width: thin; background-color: white;
+.systemsCompTable {
+  border-style: solid;
+  border-width: thin;
+  background-color: white;
   box-shadow: 0px -2px 22px -6px rgba(60, 55, 61, 0.37),
-  -5px 5px 11px -6px rgba(60, 55, 61, 0.37);
+    -5px 5px 11px -6px rgba(60, 55, 61, 0.37);
+}
+.systemsCompTable > .container > .tableHead {
+  box-shadow: 0px -2px 22px -6px rgba(60, 55, 61, 0.37),
+    -5px 5px 11px -6px rgba(60, 55, 61, 0.37);
+}
+.systemsCompTable > .container > .usa-table--borderless td {
+  border-bottom: lightgray 1px solid;
+  border-top: lightgray 1px solid;
 }
