folder restructure 100% complete; replica 75% complete

--- a/src/components/Workspace/Workspace.scss
+++ b/src/components/Workspace/Workspace.scss
@@ -1,3 +1,4 @@
+/*
 .workspaceMenu > .usa-accordion__button {
   background-color: gray !important;
   align-items: left !important;
@@ -35,3 +36,4 @@
 li.usa-nav__submenu-item a {
   color: white;
 }
+*/
