--- a/src/components/TableSearch/TableSearch.scss
+++ b/src/components/TableSearch/TableSearch.scss
@@ -35,7 +35,7 @@ form {
   padding-left: 0px !important;
   padding-right: 0px !important;
   min-width: 50px;
-  font-size: 15px;
+  font-size: 13px !important;
 
   border-radius: 0%;
 }
