--- a/src/components/TablePaginationFilter/TablePaginationFilter.scss
+++ b/src/components/TablePaginationFilter/TablePaginationFilter.scss
@@ -8,7 +8,7 @@
   padding-left: 0px !important;
   padding-right: 0px !important;
   min-width: 50px;
-  font-size: 15px;
+  font-size: 13px !important;
   margin: 0px;
   overflow: auto;
   border-radius: 0%;
@@ -26,7 +26,7 @@
   margin: 0px ;
   font-size: 15px;
   text-align:left !important;
-  font-weight:bold;
+  font-weight:bold !important;
 }
 #input-dropdown {
   min-width: 50px ;
