--- a/src/components/Workspace/Workspace.scss
+++ b/src/components/Workspace/Workspace.scss
@@ -1,9 +1,15 @@
-/*
-.workspaceMenu > .usa-accordion__button {
-  background-color: gray !important;
-  align-items: left !important;
-  padding-left: 5px;
-  color: white;
+.workspaceMenu {
+  .usa-accordion__button:hover {
+    background-color: gray !important;
+    /*align-items: left !important;
+    padding-left: 5px;
+    color: white;*/
+  }
+
+  .usa-nav__submenu-list {
+    margin-left: 30%;
+    width: 100%
+  }
 }
 .workspaceMenu > .usa-accordion__button[aria-expanded="true"] {
   background-image: url(../../../node_modules/uswds/dist/img/angle-arrow-up-white.svg),
@@ -36,4 +42,3 @@
 li.usa-nav__submenu-item a {
   color: white;
 }
-*/
