styling changes completed

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -9,5 +9,7 @@
 
 @import "../../additional-scss/global-overrides";
 
+@import "../../additional-scss/react-datatable-component-override";
+
 /***** ANIMATIONS *****/
 @import "../../animations/transitions";
