--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -4,7 +4,7 @@
   margin: 4rem auto;
   transition: all 0.5s ease;
   background: #f1f1f1;
-  position: absolute;
+  position: fixed;
   z-index: 500;
   left: 27%;
   top: 5%;
