--- a/src/additional-scss/_react-datatable-component-override.scss
+++ b/src/additional-scss/_react-datatable-component-override.scss
@@ -5,6 +5,7 @@
   }
   .rdt_TableCol_Sortable {
     color: #000 !important;
+    white-space: nowrap !important;
   }
   .rdt_TableRow {
     border-top: solid 1px #808080 !important;
