--- a/src/components/mp-viewer/UnitsTableRender/UnitsTableRender.scss
+++ b/src/components/mp-viewer/UnitsTableRender/UnitsTableRender.scss
@@ -3,11 +3,11 @@ tbody {
   display: block;
 }
 
-tbody {
-  height: 600px; /* Just for the demo          */
-  overflow-y: auto; /* Trigger vertical scroll    */
-  overflow-x: hidden; /* Hide the horizontal scroll */
-}
+/*tbody {
+  height: 600px; !* Just for the demo          *!
+  overflow-y: auto; !* Trigger vertical scroll    *!
+  overflow-x: hidden; !* Hide the horizontal scroll *!
+}*/
 .tableContainer {
   float: left;
   width: 100%;
