--- a/src/components/datatablesContainer/DataTableMethodRender/DataTableMethodRender.scss
+++ b/src/components/datatablesContainer/DataTableMethodRender/DataTableMethodRender.scss
@@ -1,3 +1,4 @@
+/*
 thead,
 tbody {
   display: block;
@@ -10,15 +11,16 @@ tbody {
   margin-bottom: -5px;
   margin-top: 0px;
 }
-/*tbody {
+!*tbody {
   height: auto; !* Just for the demo          *!
   max-height: 400px;
   overflow-y: auto; !* Trigger vertical scroll    *!
   overflow-x: hidden; !* Hide the horizontal scroll *!
   width: 100%;
-}*/
-/* .tableContainer {
+}*!
+!* .tableContainer {
   float: left;
   width: 100%;
   padding-right: 20px;
-} */
+} *!
+*/
