--- a/src/components/datatablesContainer/DataTableSystemsRender/DataTableSystemsRender.scss
+++ b/src/components/datatablesContainer/DataTableSystemsRender/DataTableSystemsRender.scss
@@ -1,3 +1,4 @@
+/*
 thead,
 tbody {
   display: block;
@@ -10,10 +11,11 @@ tbody {
   margin-bottom: -5px;
   margin-top: 0px;
 }
-/*tbody {
+!*tbody {
   height: auto; !* Just for the demo          *!
   max-height: 400px;
   overflow-y: auto; !* Trigger vertical scroll    *!
   overflow-x: hidden; !* Hide the horizontal scroll *!
   width: 100%;
-}*/
+}*!
+*/
