--- a/src/components/mp-viewer/UnitsTableRender/UnitsTableRender.scss
+++ b/src/components/mp-viewer/UnitsTableRender/UnitsTableRender.scss
@@ -1,15 +1,17 @@
+/*
 thead,
 tbody {
   display: block;
 }
 
-/*tbody {
+!*tbody {
   height: 600px; !* Just for the demo          *!
   overflow-y: auto; !* Trigger vertical scroll    *!
   overflow-x: hidden; !* Hide the horizontal scroll *!
-}*/
+}*!
 .tableContainer {
   float: left;
   width: 100%;
   padding-right: 20px;
 }
+*/
