uswds.scss enabled

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,5 +1,8 @@
+$theme-font-path: "~uswds/dist/fonts";
+$theme-image-path: "~uswds/dist/img";
+
 /***** MAIN SOURCE stylesheet *****/
-@import "~uswds/dist/css/uswds";
+@import "~uswds/dist/scss/uswds";
 
 /***** GLOBAL VARIABLES (scss values used througout the app) *****/
 @import "../../additional-scss/variables";
