--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -1,6 +1,8 @@
+$epa-disabled-dark: #adadad;
 $epa-bg-secondary-darker: linear-gradient(to bottom, #520001 0%, #6c0810 100%);
+$epa-blue-base: #005ea2;
 $epa-white: #fff;
-$epaPrimaryDark: #1a4480;
+$epa-primary-dark: #1a4480;
 
 $epa-green: #009500;
 $epa-yellow: #f7b801;
