--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -1,40 +1,18 @@
-.active-button {
-  background-color: white;
-  border-bottom: 0px;
+@import "../../additional-scss/variables";
+
+.initial-tab-button {
+  padding: 1em !important;
 }
-.notActive-button {
-  background-color: #f1f1f1;
-}
-.button-group {
-  border-top-left-radius: 7px;
-  border-top-right-radius: 7px;
-  font-family: "Merriweather", "Georgia", "Cambria", "Times New Roman", "Times",
-    serif;
+
+.tab-button {
+  color: $epa-disabled-dark;
+  cursor: pointer;
   font-weight: bold;
-  color: gray;
-  border-width: thin;
-  border-right-color: gray;
-  font-size: 15px;
-  padding-left: 17px;
-  padding-right: 15px;
-  padding-top: 5px;
+  width: 15em !important;
 }
-.usa-button-group,
-.usa-button-group--segmented,
-.usa-button-group__item {
-  margin-bottom: -14px !important;
-  position: relative !important;
-  bottom: 0 !important;
-}
-.tabTitle {
-  width: 68px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  display: inline-block;
-  vertical-align: middle;
-}
-.firstTabTitle {
-  width: 120px;
-  white-space: nowrap;
+
+.active-tab-button {
+  border-bottom: 0.25em solid $epa-blue-base;
+  color: $epa-blue-base;
+  cursor: default;
 }
