pre-nav restyling

--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -7,3 +7,5 @@ $epa-primary-dark: #1a4480;
 $epa-green: #009500;
 $epa-yellow: #f7b801;
 $epa-red: #950000;
+
+$epa-generic-font-family: "Public Sans", sans-serif;
