--- a/src/components/MonitoringPlanHome/MonitoringPlanHome.scss
+++ b/src/components/MonitoringPlanHome/MonitoringPlanHome.scss
@@ -1,25 +1,14 @@
-.home-container {
+/*.home-container {
   align-items: center;
   margin: 0;
   padding: 0;
   background-color: #fff;
   color: #212121;
-  margin-left:20px;
+  margin-left: 20px;
   padding-top: 50px;
   padding-bottom: 60px;
   max-width: 100%;
-  /* min-width: 700px; */
+  !* min-width: 700px; *!
   margin-right: 0;
   overflow: auto;
-}
-
-.tabsBox,
-.tabContent .selectedTabsBox {
-  color: gray;
-  border: solid 1px;
-  width: 100%;
-  justify-content: center;
-  bottom: 0;
-  margin-bottom: -5px;
-}
-
+}*/
