--- a/src/additional-scss/_react-datatable-component-override.scss
+++ b/src/additional-scss/_react-datatable-component-override.scss
@@ -5,7 +5,8 @@
   }
   .rdt_TableCol_Sortable {
     color: #000 !important;
-    white-space: nowrap !important;
+    /*white-space: nowrap !important;*/
+    margin-right: 1em !important;
   }
   .rdt_TableRow {
     border-top: solid 1px #808080 !important;
@@ -14,9 +15,9 @@
   .rdt_TableHead {
     /* this comment is here to avoid a code smell for empty content */
   }
-.rdt_TableHeader{
-  display:none;
-}
+  .rdt_TableHeader {
+    display: none;
+  }
   .rdt_TableHeadRow {
     border-bottom: solid 2px #808080 !important;
     .rdt_TableCol {
@@ -50,6 +51,7 @@
   }
   .rdt_TableCell {
     @extend .font-body-md;
+    font-size: 1.2em;
   }
   .__rdt_custom_sort_icon__ {
     @extend .text-indigo;
