--- a/src/additional-scss/_uswds-global-overrides.scss
+++ b/src/additional-scss/_uswds-global-overrides.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .header-container {
   .usa-nav {
     right: 0 !important;
@@ -218,4 +220,8 @@
 
 .left-neg-4 {
   left: -2rem;
+}
+
+.usa-button {
+  font-family: $epa-generic-font-family !important;
 }
