--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -1,5 +1,6 @@
 $epa-disabled-dark: #adadad;
 $epa-bg-secondary-darker: linear-gradient(to bottom, #520001 0%, #6c0810 100%);
+$epa-black: #000;
 $epa-blue-base: #005ea2;
 $epa-white: #fff;
 $epa-primary-dark: #1a4480;
