more styling changes

--- a/src/additional-scss/_react-datatable-component-override.scss
+++ b/src/additional-scss/_react-datatable-component-override.scss
@@ -97,3 +97,14 @@
     color: #808080 !important;
   }
 }
+
+.modal-content {
+  .rdt_TableBody {
+    height: auto !important;
+    padding-bottom: 3em !important;
+  }
+
+  .rdt_TableHead {
+    padding: 0.5em 0;
+  }
+}
