Feature/881 workspace windows (#1570)
* basic edit modal functionality complete (no save)

* basic edit modal functionality complete (no save)

* prior to save (display issues corrected)

* payload generated

* reverting back to before viewOnly

* uswds.scss enabled

* refresh issue with datatable render reuseable

* use interval moved out

* hardcoded settings moved into config

* dynamic tab state

* tabs restyled

* unit testing

* pre-nav restyling

* links top portion done

* test cases updated

* global restyle complete

* global restyle complete

* 508 compliance fix

* method loading conflict

* tab state saving fixed

* code smells

* code smells

* icons changed to material-ui throughout app

* updated config white space

Co-authored-by: Tony Davydets <Tony.Davydets@cvp.hcqis.org>

--- a/src/additional-scss/_uswds-global-overrides.scss
+++ b/src/additional-scss/_uswds-global-overrides.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .header-container {
   .usa-nav {
     right: 0 !important;
@@ -213,9 +215,21 @@
 }
 
 .text-primary-dark {
-  color: $epaPrimaryDark !important;
+  color: $epa-primary-dark !important;
 }
 
 .left-neg-4 {
   left: -2rem;
+}
+
+.usa-button {
+  font-family: $epa-generic-font-family !important;
+}
+
+.usa-current {
+  color: $epa-blue-base !important;
+}
+
+.usa-sidenav a:not(.usa-button) {
+  color: $epa-black;
 }
