modal restyled / 508 compliance issues with modal resolved / focus border removed when element is active

--- a/src/additional-scss/_global-styles.scss
+++ b/src/additional-scss/_global-styles.scss
@@ -36,3 +36,10 @@ body {
   margin-right: 0.5em;
   color: white;
 }
+
+.epa-active-element {
+  :is:not(textarea, input, select) {
+    border: none !important;
+  }
+  outline: none !important;
+}
