--- a/src/additional-scss/_react-datatable-component-override.scss
+++ b/src/additional-scss/_react-datatable-component-override.scss
@@ -44,7 +44,7 @@
   }
 
   .rdt_TableBody {
-    height: 500px;
+  //   height: 500px;
   }
   .rdt_ExpanderRow {
     /* this comment is here to avoid a code smell for empty content */
