--- a/src/components/HeaderInfo/HeaderInfo.scss
+++ b/src/components/HeaderInfo/HeaderInfo.scss
@@ -1,3 +1,3 @@
 .header {
-    max-width: 100%  //This will make container to take screen width
+    min-width: 100%  //This will make container to take screen width
   }
