--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -33,3 +33,21 @@ div.row.column1 {
   display: flex !important;
   flex-direction: column !important;
 }
+.skip-to-content-link {
+  left: 0;
+  position: absolute;
+  transform: translateY(-100%);
+}
+.skip-to-content-link {
+  background: #0071bc ;
+  height: 30px;
+  padding: 8px;
+  position: absolute;
+  transform: translateY(-100%);
+  transition: transform 0.3s;
+  color:black !important;
+}
+
+.skip-to-content-link:focus {
+  transform: translateY(0%);
+}
