--- a/src/additional-scss/_global-styles.scss
+++ b/src/additional-scss/_global-styles.scss
@@ -26,14 +26,13 @@ body {
   content: attr(data-initials);
   display: inline-block;
   font-size: 1em;
-  width: 2.5em;
-  height: 2.5em;
-  line-height: 2.5em;
+  width: 4em;
+  height: 4em;
+  line-height: 4em;
   text-align: center;
   border-radius: 50%;
-  background: $epa-blue-base;
-  vertical-align: middle;
-  margin-right: 0.5em;
+  background: $epa-info-base;
+  vertical-align: top;
   color: white;
 }
 
@@ -42,4 +41,8 @@ body {
     border: none !important;
   }
   outline: none !important;
+}
+
+.menu-item-separator {
+  color: $epa-darkslate-blue;
 }
