--- a/src/additional-scss/_uswds-global-overrides.scss
+++ b/src/additional-scss/_uswds-global-overrides.scss
@@ -51,14 +51,7 @@
   }
 
   .usa-header {
-    font-family: Source Sans Pro Web, Helvetica Neue, Helvetica, Roboto, Arial,
-      sans-serif !important;
-    font-size: 1.06rem !important;
-    z-index: 300 !important;
-    background-color: #0071bc !important;
     justify-content: flex-start !important;
-    box-shadow: inset 0 -10px 10px -10px #000000;
-    max-height: 8.25rem !important;
   }
 
   .usa-header--basic .usa-nav-container {
@@ -200,6 +193,59 @@
   }
 }
 
+.subheader-wrapper {
+  .usa-nav__primary button {
+    font-family: "Source Sans Pro Web", serif !important;
+    font-weight: bold !important;
+    color: #fff;
+  }
+
+  .usa-nav__primary button[aria-expanded="false"] {
+    background-image: url("/images/icons/menu-item-expand.svg"),
+      linear-gradient(transparent, transparent);
+    background-repeat: no-repeat;
+    background-size: 3rem;
+    background-position: right top;
+  }
+
+  .usa-nav__primary button[aria-expanded="true"] {
+    background-image: url("/images/icons/menu-item-collapse.svg"),
+      linear-gradient(transparent, transparent);
+    background-repeat: no-repeat;
+    background-size: 3rem;
+    background-position: right top;
+  }
+
+  .usa-nav__primary .usa-accordion__button span::after {
+    color: #fff;
+  }
+
+  .usa-nav__primary > .usa-nav__primary-item > a {
+    color: #fff;
+  }
+
+  .usa-nav__submenu {
+    background-color: #162e51;
+    top: 2.8em;
+    width: 12em;
+  }
+  #extended-nav-section-last {
+    right: 0.01em;
+  }
+
+  .usa-nav-container {
+    max-width: 100% !important;
+  }
+
+  .usa-logo {
+    font-size: 23px !important;
+  }
+
+  .usa-logo__text > h1 {
+    line-height: 1.1;
+  }
+}
+
 .usa-label,
 .usa-legend {
   margin-top: 0 !important;
@@ -250,10 +296,22 @@
   font-family: $epa-generic-font-family !important;
 }
 
+.border-white {
+  border: solid 2px $epa-white !important;
+}
+
+.bg-epa-blue-base {
+  background: $epa-blue-base !important;
+}
+
 .usa-current {
   color: $epa-blue-base !important;
 }
 
 .usa-sidenav a:not(.usa-button) {
   color: $epa-black;
+}
+
+#logoutBtn {
+  border-radius: 0.25em !important;
 }
