--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -2,10 +2,12 @@ $epa-disabled-dark: #adadad;
 $epa-bg-secondary-darker: linear-gradient(to bottom, #520001 0%, #6c0810 100%);
 $epa-black: #000;
 $epa-blue-base: #005ea2;
+$epa-info-base: #00bde3;
 $epa-white: #fff;
 $epa-primary-dark: #1a4480;
 $epa-green: #009500;
 $epa-yellow: #f7b801;
 $epa-red: #950000;
 $epa-navy: #808080;
+$epa-darkslate-blue: #365b8f;
 $epa-generic-font-family: "Public Sans", sans-serif;
