--- a/src/additional-scss/_settings.scss
+++ b/src/additional-scss/_settings.scss
@@ -7,13 +7,13 @@ $theme-utility-breakpoints: (
   // 240px:
   "card-lg": false,
   // 320px:
-  "mobile": false,
+  "mobile": true,
   // 480px:
   "mobile-lg": true,
   // 640px:
   "tablet": true,
   // 800px:
-  "tablet-lg": false,
+  "tablet-lg": true,
   // 1024px:
   "desktop": true,
   // 1200px:
