--- a/src/additional-scss/_uswds-global-overrides.scss
+++ b/src/additional-scss/_uswds-global-overrides.scss
@@ -330,8 +330,12 @@
 .bg-epa-blue-base {
   background: $epa-blue-base !important;
 }
-
-.usa-current {
+.usa-sidenav__item{
+  .usa-current {
+  color: $epa-blue-base !important;
+}
+}
+.usa-breadcrumb__link {
   color: $epa-blue-base !important;
 }
 
