--- a/src/additional-scss/_uswds-global-overrides.scss
+++ b/src/additional-scss/_uswds-global-overrides.scss
@@ -76,7 +76,7 @@
     margin-top: 2em !important;
     padding: 0 !important;
     width: 100% !important;
-    font-size: 1.25rem !important;
+    font-size: 1.25rem;
     line-height: 1.5 !important;
     position: relative !important;
     top: -4em !important;
@@ -350,4 +350,10 @@
 
 #logoutBtn {
   border-radius: 0.25em !important;
+}
+
+.usa-button-group__item {
+  @media (max-width: 128em) {
+    text-align: center;
+  }
 }
