--- a/src/additional-scss/_uswds-global-overrides.scss
+++ b/src/additional-scss/_uswds-global-overrides.scss
@@ -359,3 +359,9 @@
     text-align: center;
   }
 }
+
+.left-sidenav-to-header-wrapper {
+  .usa-accordion__button:hover {
+    background-color: $epa-white !important;
+  }
+}
