--- a/src/additional-scss/_global-styles.scss
+++ b/src/additional-scss/_global-styles.scss
@@ -54,7 +54,7 @@ body {
 
 .filter-title {
   float: left;
-  @media (min-width: 128em) {
+  @media (max-width: 32em) {
     float: none !important;
     text-align: center;
   }
@@ -66,8 +66,4 @@ body {
     padding-right: 1.25em;
     padding-left: 0.5em;
   }
-}
-
-.lock-icon {
-  font-size: 1.25rem !important;
 }
