95% complete (everything except select configurations state)

--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -4,10 +4,12 @@ $epa-black: #000;
 $epa-blue-base: #005ea2;
 $epa-info-base: #00bde3;
 $epa-white: #fff;
+$epa-off-white: #f0f0f0;
 $epa-primary-dark: #1a4480;
 $epa-green: #009500;
 $epa-yellow: #f7b801;
 $epa-red: #950000;
 $epa-navy: #808080;
 $epa-darkslate-blue: #365b8f;
+$epa-gray: #ccc;
 $epa-generic-font-family: "Public Sans", sans-serif;
