--- a/src/components/DataTableRender/DataTableRender.scss
+++ b/src/components/DataTableRender/DataTableRender.scss
@@ -1,13 +1,14 @@
+@import "../../additional-scss/variables";
+
 .break-line {
   display: block;
   width: 100%; /*or whatever width you want the effect of <hr>*/
-  border-top: 1px solid #ccc;
+  border-top: 1px solid $epa-gray;
 }
 
 .rdt_TableRow:nth-child(odd) {
-  background-color: #f0f0f0 !important;
+  background-color: $epa-off-white !important;
 }
 .rdt_TableRow:nth-child(even) {
-    background-color: #FFFFFF !important;
-  }
-  
+  background-color: $epa-white !important;
+}
