--- a/src/additional-scss/_react-datatable-component-override.scss
+++ b/src/additional-scss/_react-datatable-component-override.scss
@@ -15,8 +15,7 @@
     margin-right: 1em !important;
   }
   .rdt_TableRow {
-    border-top: solid 1px $epa-navy !important;
-    border-bottom: solid 1px $epa-navy !important;
+    /**/
   }
   .rdt_TableHead {
     /* this comment is here to avoid a code smell for empty content */
