--- a/src/additional-scss/_global-styles.scss
+++ b/src/additional-scss/_global-styles.scss
@@ -15,6 +15,10 @@ body {
 .page-header {
   font-size: 2.5em;
   font-weight: bold;
+
+  @media (max-width: 64em) {
+    font-size: 2.2em;
+  }
 }
 
 .page-subheader {
@@ -57,6 +61,17 @@ body {
   @media (max-width: 32em) {
     float: none !important;
     text-align: center;
+  }
+
+  @media (max-width: 64em) {
+    font-size: 1.25rem !important;
+    text-align: left !important;
+  }
+}
+
+header {
+  @media (max-width: 64em) {
+    padding: 0 !important;
   }
 }
 
