before extracting 'contact us' into its own component

--- a/src/additional-scss/_uswds-global-overrides.scss
+++ b/src/additional-scss/_uswds-global-overrides.scss
@@ -368,3 +368,11 @@ ul.usa-nav__primary.usa-accordion {
   @extend .react-transition;
   @extend .fade-in;
 }
+
+.usa-character-count__message {
+  color: $epa-black !important;
+}
+
+.usa-alert__heading {
+  font-weight: bold;
+}
