--- a/src/components/ModalDetails/ModalDetails.scss
+++ b/src/components/ModalDetails/ModalDetails.scss
@@ -5,17 +5,6 @@
     width:100%; /*or whatever width you want the effect of <hr>*/
     border-top: 1px solid #ccc
 }
-
-// {backBtn ? (
-//     <Button
-//       type="button"
-//       aria-label="go back to systems details"
-//       onClick={() => backBtn(false)}
-//     >
-//       <ArrowBackSharp className=" font-body-sm" />
-//     </Button>
-//   ) : (
-//     ""
-//   )}
-//   <h3 className="text-bold">{title}</h3>
-  
+.backBTNColor{
+    color:grey !important;
+}
