--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -11,9 +11,8 @@
   border-radius: 1% !important;
 }
 
-.break-line{
- 
-    display:block;
-    width:100%; /*or whatever width you want the effect of <hr>*/
-    border-top: 1px solid #ccc
+.break-line {
+  display: block;
+  width: 100%; /*or whatever width you want the effect of <hr>*/
+  border-top: 1px solid #ccc;
 }
